# AI-ChatBot-MongoDB

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  dataframe.py  history.py  main.py  mongodb_agent.py  pyproject.toml
chains/: display.py  nosql.py  output.py  st.py
prompts/: chat.py  display.py  nosql.py
tools/: db_data.py  output.py
utilities/: __init__.py  feedback.py  generic.py  history.py  json_util.py  nosql_database.py  parser.py  session.py
